objects/FINS_Equity_Asset__c.object
<CustomObject>
    <fields>
        <fullName>FINS_Private_Equity_Address__c</fullName>
        <label>Address</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Associated_Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Deal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Equity Assets</relationshipLabel>
        <relationshipName>Equity_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_City__c</fullName>
        <label>City</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Expected_Return__c</fullName>
        <label>Expected Return</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Investment_Needed__c</fullName>
        <label>Investment Needed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Targeted</fullName>
                </value>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Listed for Sale</fullName>
                </value>
                <value>
                    <fullName>Buyers Interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Size_in_acres__c</fullName>
        <label>Size (in acres)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Size_in_sq_ft__c</fullName>
        <label>Size (in sq ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama - AL</fullName>
                </value>
                <value>
                    <fullName>Alaska - AK</fullName>
                </value>
                <value>
                    <fullName>Arizona - AZ</fullName>
                </value>
                <value>
                    <fullName>Arkansas - AR</fullName>
                </value>
                <value>
                    <fullName>California - CA</fullName>
                </value>
                <value>
                    <fullName>Colorado - CO</fullName>
                </value>
                <value>
                    <fullName>Connecticut - CT</fullName>
                </value>
                <value>
                    <fullName>Delaware - DE</fullName>
                </value>
                <value>
                    <fullName>Florida - FL</fullName>
                </value>
                <value>
                    <fullName>Georgia - GA</fullName>
                </value>
                <value>
                    <fullName>Hawaii - HI</fullName>
                </value>
                <value>
                    <fullName>Idaho - ID</fullName>
                </value>
                <value>
                    <fullName>Illinois - IL</fullName>
                </value>
                <value>
                    <fullName>Indiana - IN</fullName>
                </value>
                <value>
                    <fullName>Iowa - IA</fullName>
                </value>
                <value>
                    <fullName>Kansas - KS</fullName>
                </value>
                <value>
                    <fullName>Kentucky - KY</fullName>
                </value>
                <value>
                    <fullName>Louisiana - LA</fullName>
                </value>
                <value>
                    <fullName>Maine - ME</fullName>
                </value>
                <value>
                    <fullName>Maryland - MD</fullName>
                </value>
                <value>
                    <fullName>Massachusetts - MA</fullName>
                </value>
                <value>
                    <fullName>Michigan - MI</fullName>
                </value>
                <value>
                    <fullName>Minnesota - MN</fullName>
                </value>
                <value>
                    <fullName>Mississippi - MS</fullName>
                </value>
                <value>
                    <fullName>Missouri - MO</fullName>
                </value>
                <value>
                    <fullName>Montana - MT</fullName>
                </value>
                <value>
                    <fullName>Nebraska - NE</fullName>
                </value>
                <value>
                    <fullName>Nevada - NV</fullName>
                </value>
                <value>
                    <fullName>New Hampshire - NH</fullName>
                </value>
                <value>
                    <fullName>New Jersey - NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Mixed Use</fullName>
                </value>
                <value>
                    <fullName>Open Lot</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Value_of_Asset__c</fullName>
        <label>Value of Asset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Equity Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Equity Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equity Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>